--- a/index.css
+++ b/index.css
@@ -10,6 +10,21 @@ body {
     margin: auto;
 }
 
+.img-pic {
+    border-radius: 40%;
+    width: 300px;
+    margin: auto;
+}
+
+h1 {
+    text-align: center;
+    padding: 20px;
+}
+
+p { 
+    text-align: center;
+}
+
 .content {
     text-align: center;
     padding: 20px;
@@ -23,7 +38,7 @@ body {
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 20%;
+    width: 100%;
     margin: 30px;
     background-color: white;
 }
